# python

./: .gitignore  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
deeplearning/: Chapter 03 - IMBP.ipynb  Chapter 03 - IMDB.ipynb  Chapter 03 - Reuters.ipynb  chapter03.py  requirements.txt
fisher-yates/: README.md  shuffle.py  tests.py
latexreports/: README.md  figures.py  report-figures.tex
notebooks/: ETF Weights.ipynb  HNFeeling.ipynb  HypothesisPandas.ipynb
pyreturns/: README.rst  pyproject.toml
pyreturns/pyreturns/: SPY vs RSP.ipynb
pyreturns/tests/: test_pyreturns.py
python/basic-rss-agg/: README.md  main.py
python/basic-rss-agg/templates/: index.html  layout.html
python/bloomfilter/: bloom.py  mm3.py
python/btclient/: btorrent.py
python/cpp_formatter/: __init__.py
python/deeplearning/: chapter03.py
python/fisher_yates/: shuffle.py
python/latexreports/: figures.py  report-figures.tex
tests/: test_bloom_filter.py  test_fisher_yates.py
tests/btclient/: test_btorrent_parser.py
