[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Damien Toma <damientoma.pro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pandas = "^0.25.3"
numpy = "^1.18"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = {version = "^18.3-alpha.0", allow-prereleases = true}
hypothesis = "^4.56"
mypy = "^0.761.0"
ipython = "^7.11"
jupyter = "^1.0"
invoke = "^1.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
