[tool.poetry]
name = "pyreturns"
version = "0.1.0"
description = ""
authors = ["Damien Toma <damientoma.pro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
jupyter = "^1.0"
pandas = "^0.24.2"
matplotlib = "^3.0"
pandas-datareader = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
